--- a/componentes-01/src/components/Card/Card.module.scss
+++ b/componentes-01/src/components/Card/Card.module.scss
@@ -1,14 +1,53 @@
-// Card.module.scss
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
+  background-color: rgb(243, 243, 243);
+
+  width: 100%;
+  height: 100vh;
+}
 .card {
-    border: 1px solid #ddd;
-    padding: 16px;
-    margin: 16px;
-  }
-  
-  .favoriteCard {
-    border: 2px solid #f00;
-    padding: 20px;
-    margin: 20px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  border: 4px solid #545050;
+  padding: 16px;
+  margin: 16px;
+  gap: 20px;
+
+  width: 500px;
+  height: 500px;
+}
+
+.favoriteCard {
+  border: 2px solid #f00;
+  padding: 20px;
+  margin: 20px;
+}
+
+.isFavorite {
+  width: 100px;
+  height: 100px;
+}
+
+.imgGif {
+  width: 300px;
+  height: auto;
+}
+
+.buttonFav {
+  color: rgb(0, 0, 0);
+  background-color: rgba(79, 73, 73, 0.665);
+
+  font-size: medium;
+  font-weight: bold;
+
+  border-radius: 10px;
+
+  width: 150px;
+  height: 50px;
+}
