--- a/componentes-01/src/components/Card/Card.module.scss
+++ b/componentes-01/src/components/Card/Card.module.scss
@@ -19,6 +19,7 @@
   padding: 16px;
   margin: 16px;
   gap: 20px;
+  border-radius: 10px;
 
   width: 500px;
   height: 500px;
@@ -34,6 +35,7 @@
   padding: 16px;
   margin: 16px;
   gap: 20px;
+  border-radius: 10px;
 
   width: 500px;
   height: 500px;
