--- a/componentes-01/src/components/Card/Card.module.scss
+++ b/componentes-01/src/components/Card/Card.module.scss
@@ -15,14 +15,18 @@
   justify-content: center;
   align-items: center;
 
-  border: 4px solid #545050;
-  padding: 16px;
   margin: 16px;
-  gap: 20px;
-  border-radius: 10px;
+  width: 204px;
+  height: auto;
 
-  width: 500px;
-  height: 500px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+
+  &:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .favoriteCard {
@@ -31,35 +35,63 @@
   justify-content: center;
   align-items: center;
 
-  border: 6px solid #f00;
-  padding: 16px;
   margin: 16px;
-  gap: 20px;
-  border-radius: 10px;
+  width: 204px;
+  height: auto;
 
-  width: 500px;
-  height: 500px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+
+  &:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.337);
+  }
 }
 
 .isFavorite {
-  width: 300px;
+  object-fit: cover;
+  width: 100%;
   height: auto;
 }
 
 .imgGif {
-  width: 300px;
+  object-fit: cover;
+  width: 100%;
   height: auto;
 }
 
 .buttonFav {
+  border: 0px transparent;
+  font-size: small;
+  font-weight: bold;
+  
   color: rgb(0, 0, 0);
   background-color: rgba(79, 73, 73, 0.665);
+  transition: transform 0.3s ease;
 
-  font-size: medium;
-  font-weight: bold;
+  width: 100%;
+  height: auto;
 
-  border-radius: 10px;
+  &:hover {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.744);
+    transform: scale(1.1, 1.1);
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.333);
+  }
+}
+.nftInfo {
+  padding: 8px;
+  text-align: center;
+  h5 {
+    margin: 8px 0 4px;
+    font-size: 1rem;
+    color: #333;
+  }
 
-  width: 150px;
-  height: 50px;
+  p {
+    margin: 0;
+    font-size: 0.875rem;
+    color: #666;
+  }
 }
